force-app/main/default/objects/Scan_Comparison__c/Scan_Comparison__c.object-meta.xml
<CustomObject>
    <label>Scan Comparison</label>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>Scan Comparison Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scan Comparison</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>