force-app/main/default/objects/Scan_Comparison__c/fields/After_P1_Violations__c.field-meta.xml
<CustomField>
    <fullName>After_P1_Violations__c</fullName>
    <label>After P1 Violations</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>