force-app/main/default/objects/Scan_Comparison__c/fields/After_SCA_Result__c.field-meta.xml
<CustomField>
    <fullName>After_SCA_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>After SCA Result</label>
    <referenceTo>copado__Static_Code_Analysis_Result__c</referenceTo>
    <relationshipLabel>Scan Comparison (SCA Result 2)</relationshipLabel>
    <relationshipName>SCA_PMD_Comparisons1</relationshipName>
    <type>Lookup</type>
</CustomField>