force-app/main/default/objects/Scan_Comparison__c/fields/Before_P1_Violations__c.field-meta.xml
<CustomField>
    <fullName>Before_P1_Violations__c</fullName>
    <label>Before P1 Violations</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>