force-app/main/default/objects/Scan_Comparison__c/fields/Before_P2_Violations__c.field-meta.xml
<CustomField>
    <fullName>Before_P2_Violations__c</fullName>
    <label>Before P2 Violations</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>