force-app/main/default/objects/Scan_Comparison__c/fields/Before_SCA_Result__c.field-meta.xml
<CustomField>
    <fullName>Before_SCA_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Before SCA Result</label>
    <referenceTo>copado__Static_Code_Analysis_Result__c</referenceTo>
    <relationshipLabel>Scan Comparison (SCA Result 1)</relationshipLabel>
    <relationshipName>SCA_PMD_Comparisons</relationshipName>
    <type>Lookup</type>
</CustomField>