force-app/main/default/objects/Scan_Comparison__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <formula>IF(Overall_Difference__c &gt; 0, &quot;Increase&quot;,
   IF(Overall_Difference__c &lt; 0, &quot;Decrease&quot;,
      &quot;No Change&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outcome</label>
    <type>Text</type>
</CustomField>