force-app/main/default/objects/Scan_Comparison__c/fields/Overall_Difference__c.field-meta.xml
<CustomField>
    <fullName>Overall_Difference__c</fullName>
    <formula>After_SCA_Result__r.copado__Number_of_Violations__c  -  Before_SCA_Result__r.copado__Number_of_Violations__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>