force-app/main/default/objects/Scan_Comparison__c/fields/P3_Difference__c.field-meta.xml
<CustomField>
    <fullName>P3_Difference__c</fullName>
    <formula>After_P3_Violations__c - Before_P3_Violations__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P3 Difference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>