force-app/main/default/objects/Scan_Comparison__c/fields/Release_Playbook__c.field-meta.xml
<CustomField>
    <fullName>Release_Playbook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release Playbook</label>
    <referenceTo>Release_Playbook__c</referenceTo>
    <relationshipName>SCA_PMD_Comparisons</relationshipName>
    <type>Lookup</type>
</CustomField>