force-app/main/default/objects/Scan_Comparison__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Outcome__c</columns>
    <columns>Overall_Difference__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>